--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.6.1
+  cloud_firestore: ^4.4.2
+  firebase_auth: ^4.2.8
 
 dev_dependencies:
   flutter_test:
