--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.6.1
   cloud_firestore: ^4.4.2
   firebase_auth: ^4.2.8
+  flutterfire_ui: ^0.4.3+20
 
 dev_dependencies:
   flutter_test:
